# bbcom

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  README.md  README.zh-CN.md  README_zh.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: audit.toml
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
scripts/: dev.sh
src/: AiWindow.vue  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  checksum.rs  config.rs  export.rs  mod.rs
src-tauri/src/export/: formatter.rs
src-tauri/src/models/: checksum_type.rs  data_frame.rs  errors.rs  mod.rs  port_config.rs
src-tauri/src/utils/: checksum.rs  hex.rs  mod.rs  timestamp.rs
src/components/ai/: AiLogAssistant.vue  AiPanel.vue  AiSettingsPanel.vue  ai-options.ts
src/components/app-shell/: AppShell.vue  CreateSessionDialog.vue
src/components/port-selector/: PortSelector.vue
src/components/send-panel/: AiTerminalAssistant.vue  (+1 more)
src/composables/: useAiSessionBridge.ts  useAiWindowSession.ts  useAiWindowState.ts  useAppShortcuts.ts  useExport.ts  usePacketFilter.ts  usePacketFormatter.ts  usePacketVirtualScroll.ts  usePortWatcher.ts  useSerialData.ts  useSerialPort.ts  useSessionActions.ts
src/lib/: ai-error.ts  ai-log-context.ts  checksum-constants.ts  constants.ts  format.ts  hex.ts  lru-cache.ts  storage.ts  time.ts
src/stores/: app.ts  serial.ts  sessions.ts
src/styles/: global.css  variables.css
src/types/: index.ts
(+4 files in other folders)
